--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -1,1 +1,46 @@
-<p>signup works!</p>
+<section class="signup-section">
+    <!-- Welcome Message -->
+    <h2 class="text-center">********Welcome to the Fitness Tracker App********</h2>
+
+    <!-- The Sign Up Form -->
+    <form [formGroup]="signUpForm" fxLayout="column" fxLayoutAlign="center center" class="signup-form">
+        <!-- Name -->
+        <mat-form-field appearance="fill">
+            <mat-label>Name</mat-label>
+            <input matInput type="name" formControlName="name" placeholder="Your name">
+            <mat-error *ngIf="name?.errors?.['required']">Name is required.</mat-error>
+            <mat-error *ngIf="name?.errors?.['name']">Invalid name.</mat-error>
+        </mat-form-field>
+
+        <!-- Email Address -->
+        <mat-form-field appearance="fill">
+            <mat-label>Email</mat-label>
+            <input matInput type="email" formControlName="email" placeholder="Your email">
+            <mat-error *ngIf="email?.errors?.['required']">Email is required.</mat-error>
+            <mat-error *ngIf="email?.errors?.['email']">Invalid email.</mat-error>
+        </mat-form-field>
+
+        <!-- Password -->
+        <mat-form-field appearance="fill">
+            <mat-label>Password</mat-label>
+            <input matInput type="password" formControlName="password" placeholder="Your password">
+            <mat-hint *ngIf="password?.value.length < 8" align="end">{{password?.value.length}}/8</mat-hint>
+        </mat-form-field>
+
+        <!-- Date of Birth -->
+        <mat-form-field appearance="fill">
+            <mat-label>DOB</mat-label>
+            <input matInput [max]="maxDate" readonly formControlName="dateOfBirth" [matDatepicker]="picker" placeholder="Select date">
+            <mat-hint>DD/MM/YYYY</mat-hint>
+            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+            <mat-datepicker #picker></mat-datepicker>
+            <mat-error *ngIf="dateOfBirth?.errors?.['required']">DOB is required.</mat-error>
+        </mat-form-field>
+
+        <!-- Terms checkbox -->
+        <mat-checkbox color="primary">Agree to terms & conditions.*</mat-checkbox>
+
+        <!-- Form Submit -->
+        <button [disabled]="signUpForm?.invalid" mat-raised-button type="submit" color="primary" (click)="onSignUp()">Sign Up</button>
+    </form>
+</section>
