Split navigation components

--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,1 +1,5 @@
-<p>welcome works!</p>
+<div class="section container">
+    <div class="app-text" fxFlexFill fxLayoutAlign="center center">
+        The Fitness-Tracker
+    </div>
+</div>
