Add logout link to header toolbar

--- a/src/app/navigation/header-toolbar/header-toolbar.component.html
+++ b/src/app/navigation/header-toolbar/header-toolbar.component.html
@@ -12,6 +12,7 @@
             <li><a routerLink="/signup">Sign Up</a></li>
             <li><a routerLink="/login">Log In</a></li>
             <li><a routerLink="/training">Training</a></li>
+            <li><a routerLink="/">Logout</a></li>
         </ul>
     </div>
 </mat-toolbar>
