--- a/src/app/navigation/header-toolbar/header-toolbar.component.css
+++ b/src/app/navigation/header-toolbar/header-toolbar.component.css
@@ -3,3 +3,10 @@ a, ul {
     list-style-type: none;
     color: white;
 }
+
+.logo {
+    width: 110px;
+    height: 35px;
+    margin-left: 20px;
+    margin-bottom: 7px;
+}
