--- a/src/app/navigation/header-toolbar/header-toolbar.component.html
+++ b/src/app/navigation/header-toolbar/header-toolbar.component.html
@@ -5,7 +5,9 @@
         </button>
     </div>
     <div>
-        <a routerLink="/">LOGO</a>
+        <a routerLink="/">
+            <img class="logo" src="../../../assets/logo.png" alt="">
+        </a>
     </div>
     <div fxFlex fxLayout fxLayoutAlign="flex-end" fxHide.xs>
         <ul fxLayout fxLayoutGap="15px" class="navigation-items mt-3">
