Add content to welcome screen

--- a/src/app/welcome/welcome.component.css
+++ b/src/app/welcome/welcome.component.css
@@ -1,14 +1,4 @@
-* {
-    box-sizing: border-box;
-}
-
-.app-text {
-    font-weight: 500;
-    background-color: green;
-}
-
-.section {
-    height: 100vh;
-    background-color: red;
-    overflow: hidden;
+.welcome {
+    text-align: center;
+    margin-top: 20px;
 }
