--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,5 +1,22 @@
-<div class="section container">
-    <div class="app-text" fxFlexFill fxLayoutAlign="center center">
-        The Fitness-Tracker
-    </div>
+<div class="welcome" fxFlex fxLayout="column" fxLayout.gt-md="row" fxLayoutAlign="center center" fxLayoutGap.gt-md="20px">
+    <section>
+        <div class="activity">
+            <h1>Activity</h1>
+            <p>The way to bring about change is to be proactive and active.</p>
+        </div>
+    </section>
+
+    <section>
+        <div class="community">
+            <h1>Community</h1>
+            <p>Alone, we can do so little; together, we can do so much.</p>
+        </div>
+    </section>
+    
+    <section>
+        <div class="challenges">
+            <h1>Challenges</h1>
+            <p>When the going gets tough, put one foot in front of the other and just keep going. Don’t give up.</p>
+        </div>
+    </section>
 </div>
