Add training child components and update new-training screen

--- a/src/app/training/training/training.component.html
+++ b/src/app/training/training/training.component.html
@@ -1,1 +1,15 @@
-<p>training works!</p>
+<div class="training">
+    <mat-tab-group mat-align-tabs="center">
+        <mat-tab label="New Training">
+            <app-new-training></app-new-training>
+        </mat-tab>
+    
+        <mat-tab label="Current Training">
+            <app-current-training></app-current-training>
+        </mat-tab>
+    
+        <mat-tab label="Past Trainings">
+            <app-past-trainings></app-past-trainings>
+        </mat-tab>
+    </mat-tab-group>
+</div>
