--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
 html, body { 
     height: 100%;
@@ -12,3 +13,7 @@ body {
     box-sizing: border-box;
 }
 
+.makeItMiddle{
+    transform: translate(-50%, -50%);
+    margin-bottom: 100px;
+}
