--- a/src/app/training/training/current-training/current-training.component.html
+++ b/src/app/training/training/current-training/current-training.component.html
@@ -1,1 +1,6 @@
-<p>current-training works!</p>
+<section class="current-training" fxLayout="column" fxLayoutAlign="center center">
+    <mat-progress-spinner mode="determinate" [value]="trainingProgress"></mat-progress-spinner>
+    <h1>{{trainingProgress}}%</h1>
+    <p>Keep going man, you will make it!!</p>
+    <button mat-raised-button color="accent" (click)="onStopTraining()">Stop</button>
+</section>
