--- a/src/app/training/training/training.component.html
+++ b/src/app/training/training/training.component.html
@@ -1,15 +1,13 @@
-<div class="training">
-    <mat-tab-group mat-align-tabs="center">
+<section class="training">
+    <mat-tab-group *ngIf="!ongoingTraining" mat-align-tabs="center">
         <mat-tab label="New Training">
-            <app-new-training></app-new-training>
-        </mat-tab>
-    
-        <mat-tab label="Current Training">
-            <app-current-training></app-current-training>
+            <app-new-training (startTraining)="ongoingTraining = true"></app-new-training>
         </mat-tab>
     
         <mat-tab label="Past Trainings">
             <app-past-trainings></app-past-trainings>
         </mat-tab>
     </mat-tab-group>
-</div>
+</section>
+
+<app-current-training *ngIf="ongoingTraining"></app-current-training>
