--- a/src/app/training/training/past-trainings/past-trainings.component.html
+++ b/src/app/training/training/past-trainings/past-trainings.component.html
@@ -1,35 +1,39 @@
-<table mat-table [dataSource]="pastTrainingsData" class="mat-elevation-z8">
+<mat-table [dataSource]="pastTrainingsData" matSort class="mat-elevation-z8">
+    <ng-container matColumnDef="position">
+        <mat-header-cell *matHeaderCellDef> S.No. </mat-header-cell>
+        <mat-cell *matCellDef="let element; let i = index"> {{i+1}} </mat-cell>
+      </ng-container>
 
     <!-- Position Column -->
-    <ng-container matColumnDef="state">
-        <th mat-header-cell *matHeaderCellDef> State </th>
-        <td mat-cell *matCellDef="let element"> {{element.state}} </td>
-    </ng-container>
-
-    <!-- Name Column -->
     <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef> Name </th>
-        <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+      <mat-header-cell mat-sort-header *matHeaderCellDef> Name </mat-header-cell>
+      <mat-cell *matCellDef="let element"> {{element.name}} </mat-cell>
     </ng-container>
-
-    <!-- Weight Column -->
-    <ng-container matColumnDef="duration">
-        <th mat-header-cell *matHeaderCellDef> Duration </th>
-        <td mat-cell *matCellDef="let element"> {{element.duration}} </td>
-    </ng-container>
-
-    <!-- Symbol Column -->
-    <ng-container matColumnDef="calories">
-        <th mat-header-cell *matHeaderCellDef> Calories </th>
-        <td mat-cell *matCellDef="let element"> {{element.calories | number}} </td>
-    </ng-container>
-
-    <!-- Symbol Column -->
+  
+    <!-- Name Column -->
+   
     <ng-container matColumnDef="date">
-        <th mat-header-cell *matHeaderCellDef> Date </th>
-        <td mat-cell *matCellDef="let element"> {{element.date | date}} </td>
+      <mat-header-cell *matHeaderCellDef> Date </mat-header-cell>
+      <mat-cell *matCellDef="let element"> {{element.date | date}} </mat-cell>
+    </ng-container>
+  
+    <!-- Weight Column -->
+    <ng-container matColumnDef="calories">
+      <mat-header-cell *matHeaderCellDef> Calories </mat-header-cell>
+      <mat-cell *matCellDef="let element"> {{element.calories | number}} </mat-cell>
+    </ng-container>
+  
+    <!-- Symbol Column -->
+    <ng-container matColumnDef="state">
+      <mat-header-cell *matHeaderCellDef> State </mat-header-cell>
+      <mat-cell *matCellDef="let element"> {{element.state}} </mat-cell>
     </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-</table>
+    <ng-container matColumnDef="duration">
+        <mat-header-cell *matHeaderCellDef> Duration </mat-header-cell>
+        <mat-cell *matCellDef="let element"> {{element.duration | number}} </mat-cell>
+    </ng-container>
+  
+    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+    <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+  </mat-table>
