--- a/src/app/training/training/past-trainings/past-trainings.component.html
+++ b/src/app/training/training/past-trainings/past-trainings.component.html
@@ -1,47 +1,51 @@
+<!-- Filter box -->
 <mat-form-field appearance="standard">
     <mat-label>Filter</mat-label>
     <input (keyup)="applyFilter($event)" class="filter-input-field" matInput>
 </mat-form-field>
+
+<!-- past-trainings table -->
 <mat-table [dataSource]="pastTrainingsData" matSort class="mat-elevation-z8">
+
+    <!-- S.No. -->
     <ng-container matColumnDef="position">
         <mat-header-cell *matHeaderCellDef> S.No. </mat-header-cell>
         <mat-cell *matCellDef="let element; let i = index"> {{i+1}} </mat-cell>
-      </ng-container>
+    </ng-container>
 
-    <!-- Position Column -->
+    <!-- Excercise Name -->
     <ng-container matColumnDef="name">
-      <mat-header-cell mat-sort-header *matHeaderCellDef> Name </mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{element.name}} </mat-cell>
-    </ng-container>
-  
-    <!-- Name Column -->
-   
-    <ng-container matColumnDef="date">
-      <mat-header-cell mat-sort-header *matHeaderCellDef> Date </mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{element.date | date}} </mat-cell>
-    </ng-container>
-  
-    <!-- Weight Column -->
-    <ng-container matColumnDef="calories">
-      <mat-header-cell mat-sort-header *matHeaderCellDef> Calories </mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{element.calories | number}} </mat-cell>
-    </ng-container>
-  
-    <!-- Symbol Column -->
-    <ng-container matColumnDef="state">
-      <mat-header-cell mat-sort-header *matHeaderCellDef> State </mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{element.state}} </mat-cell>
+        <mat-header-cell mat-sort-header *matHeaderCellDef> Name </mat-header-cell>
+        <mat-cell *matCellDef="let element"> {{element.name}} </mat-cell>
     </ng-container>
 
+    <!-- Date -->
+    <ng-container matColumnDef="date">
+        <mat-header-cell mat-sort-header *matHeaderCellDef> Date </mat-header-cell>
+        <mat-cell *matCellDef="let element"> {{element.date | date}} </mat-cell>
+    </ng-container>
+
+    <!-- Calories -->
+    <ng-container matColumnDef="calories">
+        <mat-header-cell mat-sort-header *matHeaderCellDef> Calories </mat-header-cell>
+        <mat-cell *matCellDef="let element"> {{element.calories | number}} </mat-cell>
+    </ng-container>
+
+    <!-- State -->
+    <ng-container matColumnDef="state">
+        <mat-header-cell mat-sort-header *matHeaderCellDef> State </mat-header-cell>
+        <mat-cell *matCellDef="let element"> {{element.state}} </mat-cell>
+    </ng-container>
+
+    <!-- Duration -->
     <ng-container matColumnDef="duration">
         <mat-header-cell mat-sort-header *matHeaderCellDef> Duration </mat-header-cell>
         <mat-cell *matCellDef="let element"> {{element.duration | number}} </mat-cell>
     </ng-container>
-  
+
     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
     <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-  </mat-table>
+</mat-table>
 
-  <mat-paginator [pageSizeOptions]="[1,5,10]" showFirstLastButtons>
-
-  </mat-paginator>
+<!-- The paginator -->
+<mat-paginator [pageSizeOptions]="[1,5,10]" showFirstLastButtons></mat-paginator>
