--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -21,7 +21,7 @@
         </mat-form-field>
 
         <!-- Terms checkbox -->
-        <mat-checkbox color="primary">Agree to terms & conditions.*</mat-checkbox>
+        <mat-checkbox matTooltip="{terms & conditions not found}" [matTooltipPosition]="tooltipPosition.value!" disabled checked color="primary">Agree to terms & conditions.*</mat-checkbox>
 
         <!-- Form Submit -->
         <button [disabled]="loginForm?.invalid" mat-raised-button type="submit" color="primary" (click)="onLogin()">Sign Up</button>
