Integrate db to read/write past-trainings

--- a/src/app/training/training/past-trainings/past-trainings.component.html
+++ b/src/app/training/training/past-trainings/past-trainings.component.html
@@ -22,7 +22,7 @@
     <!-- Date -->
     <ng-container matColumnDef="date">
         <mat-header-cell mat-sort-header *matHeaderCellDef> Date </mat-header-cell>
-        <mat-cell *matCellDef="let element"> {{element.date | date}} </mat-cell>
+        <mat-cell *matCellDef="let element"> {{element.date.toDate() | date}} </mat-cell>
     </ng-container>
 
     <!-- Calories -->
