--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -42,6 +42,7 @@
         <mat-checkbox disabled checked color="primary">Agree to terms & conditions.*</mat-checkbox>
 
         <!-- Form Submit -->
-        <button [disabled]="signUpForm?.invalid" mat-raised-button type="submit" color="primary" (click)="onSignUp()">Sign Up</button>
+        <button *ngIf="!isLoading" [disabled]="signUpForm?.invalid" mat-raised-button type="submit" color="primary" (click)="onSignUp()">Sign Up</button>
+        <mat-spinner *ngIf="isLoading"></mat-spinner>
     </form>
 </section>
