Center the filter-box

--- a/src/app/training/training/past-trainings/past-trainings.component.html
+++ b/src/app/training/training/past-trainings/past-trainings.component.html
@@ -1,5 +1,5 @@
 <!-- Filter box -->
-<mat-form-field appearance="standard">
+<mat-form-field appearance="standard" fxLayout="column" fxLayoutAlign="center center">
     <mat-label>Filter</mat-label>
     <input (keyup)="applyFilter($event)" class="filter-input-field" matInput>
 </mat-form-field>
