--- a/src/app/training/training/new-training/new-training.component.html
+++ b/src/app/training/training/new-training/new-training.component.html
@@ -17,7 +17,10 @@
                 </mat-form-field>
             </mat-card-content>
 
-            <button mat-raised-button color="primary" [disabled]="f.invalid">Start</button>
+            <button *ngIf="!isAvailableExcercisesLoading" mat-raised-button color="primary" [disabled]="f.invalid">Start</button>
+            <div *ngIf="isAvailableExcercisesLoading" fxLayout="column" fxLayoutAlign="center center">
+                <mat-spinner></mat-spinner>
+            </div>
         </mat-card>
     </form>
 </section>
