Update signup/login form styles

--- a/src/app/auth/login/login.component.css
+++ b/src/app/auth/login/login.component.css
@@ -3,10 +3,14 @@ mat-form-field {
     
 }
 
-h2 {
+.login-section {
+    justify-content: center;
+}
+
+/* h2 {
     margin-top: 25px;
     text-decoration: underline;
-}
+} */
 
 button {
     margin-top: 10px;
