--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -1,48 +1,58 @@
-<section class="signup-section">
+<section class="signup-section" fxLayout="row" fxLayoutAlign="center">
     <!-- Welcome Message -->
-    <h2 class="text-center">********Welcome to the Fitness Tracker App********</h2>
+    <!-- <h2 class="text-center">********Welcome to the Fitness Tracker App********</h2> -->
 
     <!-- The Sign Up Form -->
-    <form [formGroup]="signUpForm" fxLayout="column" fxLayoutAlign="center center" class="signup-form">
-        <!-- Name -->
-        <mat-form-field appearance="fill">
-            <mat-label>Name</mat-label>
-            <input matInput type="name" formControlName="name" placeholder="Your name">
-            <mat-error *ngIf="name?.errors?.['required']">Name is required.</mat-error>
-            <mat-error *ngIf="name?.errors?.['name']">Invalid name.</mat-error>
-        </mat-form-field>
+    <form [formGroup]="signUpForm" class="signup-form">
+        <mat-card style="margin-top: 25px" fxFlex.gt-sm="400px" fxLayout="column" fxLayoutAlign="center center">
+            <mat-card-title>
+                SignUp
+            </mat-card-title>
 
-        <!-- Email Address -->
-        <mat-form-field appearance="fill">
-            <mat-label>Email</mat-label>
-            <input matInput type="email" formControlName="email" placeholder="Your email">
-            <mat-error *ngIf="email?.errors?.['required']">Email is required.</mat-error>
-            <mat-error *ngIf="email?.errors?.['email']">Invalid email.</mat-error>
-        </mat-form-field>
+            <mat-card-content fxLayout="column" fxLayoutAlign="center center">
+                <!-- Name -->
+                <mat-form-field appearance="standard">
+                    <mat-label>Name</mat-label>
+                    <input matInput type="name" formControlName="name" placeholder="Your name">
+                    <mat-error *ngIf="name?.errors?.['required']">Name is required.</mat-error>
+                    <mat-error *ngIf="name?.errors?.['name']">Invalid name.</mat-error>
+                </mat-form-field>
 
-        <!-- Password -->
-        <mat-form-field appearance="fill">
-            <mat-label>Password</mat-label>
-            <input matInput type="password" formControlName="password" placeholder="Your password">
-            <mat-error *ngIf="password?.errors?.['required']">Password is required.</mat-error>
-            <mat-hint *ngIf="password?.value.length < 8" align="end">{{password?.value.length}}/8</mat-hint>
-        </mat-form-field>
+                <!-- Email Address -->
+                <mat-form-field appearance="standard">
+                    <mat-label>Email</mat-label>
+                    <input matInput type="email" formControlName="email" placeholder="Your email">
+                    <mat-error *ngIf="email?.errors?.['required']">Email is required.</mat-error>
+                    <mat-error *ngIf="email?.errors?.['email']">Invalid email.</mat-error>
+                </mat-form-field>
 
-        <!-- Date of Birth -->
-        <mat-form-field appearance="fill">
-            <mat-label>DOB</mat-label>
-            <input matInput [max]="maxDate" readonly formControlName="dateOfBirth" [matDatepicker]="picker" placeholder="Select date">
-            <mat-hint>DD/MM/YYYY</mat-hint>
-            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-            <mat-datepicker #picker></mat-datepicker>
-            <mat-error *ngIf="dateOfBirth?.errors?.['required']">DOB is required.</mat-error>
-        </mat-form-field>
+                <!-- Password -->
+                <mat-form-field appearance="standard">
+                    <mat-label>Password</mat-label>
+                    <input matInput type="password" formControlName="password" placeholder="Your password">
+                    <mat-error *ngIf="password?.errors?.['required']">Password is required.</mat-error>
+                    <mat-hint *ngIf="password?.value.length < 8" align="end">{{password?.value.length}}/8</mat-hint>
+                </mat-form-field>
 
-        <!-- Terms checkbox -->
-        <mat-checkbox disabled checked color="primary">Agree to terms & conditions.*</mat-checkbox>
+                <!-- Date of Birth -->
+                <mat-form-field appearance="standard">
+                    <mat-label>DOB</mat-label>
+                    <input matInput [max]="maxDate" readonly formControlName="dateOfBirth" [matDatepicker]="picker"
+                        placeholder="Select date">
+                    <mat-hint>DD/MM/YYYY</mat-hint>
+                    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                    <mat-datepicker #picker></mat-datepicker>
+                    <mat-error *ngIf="dateOfBirth?.errors?.['required']">DOB is required.</mat-error>
+                </mat-form-field>
 
-        <!-- Form Submit -->
-        <button *ngIf="!isLoading" [disabled]="signUpForm?.invalid" mat-raised-button type="submit" color="primary" (click)="onSignUp()">Sign Up</button>
-        <mat-spinner *ngIf="isLoading"></mat-spinner>
+                <!-- Terms checkbox -->
+                <mat-checkbox disabled checked color="primary">Agree to terms & conditions.*</mat-checkbox>
+
+                <!-- Form Submit -->
+                <button *ngIf="!isLoading" [disabled]="signUpForm?.invalid" mat-raised-button type="submit"
+                    color="primary" (click)="onSignUp()">Sign Up</button>
+                <mat-spinner *ngIf="isLoading"></mat-spinner>
+            </mat-card-content>
+        </mat-card>
     </form>
 </section>
