--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -31,6 +31,9 @@
                     <mat-label>Password</mat-label>
                     <input matInput type="password" formControlName="password" placeholder="Your password">
                     <mat-error *ngIf="password?.errors?.['required']">Password is required.</mat-error>
+                    <mat-error *ngIf="password?.value.length < 8 && !password?.hasError('required')">
+                        Minimum 8 characters required.
+                    </mat-error>
                     <mat-hint *ngIf="password?.value.length < 8" align="end">{{password?.value.length}}/8</mat-hint>
                 </mat-form-field>
 
