--- a/src/app/welcome/welcome.component.css
+++ b/src/app/welcome/welcome.component.css
@@ -1,4 +1,61 @@
-.welcome {
+.welcome-section {
     text-align: center;
-    margin-top: 20px;
+    position: relative;
+}
+
+.landing-wallpaper {
+    overflow: hidden;
+}
+
+h1 {
+    /* position: absolute; */
+    /* text-align: center; */
+    font-size: 70px;
+    font-weight: 600;
+    background-image: linear-gradient(to left, #553c9a, #b393d3);
+    color: transparent;
+    background-clip: text;
+    /* -webkit-background-clip: text; */
+}
+
+.welcome-container {
+    position: relative;
+    text-align: center;
+    overflow: hidden;
+}
+
+.quote {
+    position: absolute;
+    top: 49%;
+    left: 50%;
+    width: 100%;
+    transform: translate(-50%, -50%);
+    line-height: 1;
+
+    font-size: 50px;
+    font-weight: 600;
+    color: #3f51b5;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+@media screen and (max-width: 480px) {
+    .quote {
+        position: absolute;
+        top: 45%;
+        left: 50%;
+        width: 100%;
+        transform: translate(-50%, -50%);
+        line-height: 1;
+
+        font-size: 40px;
+        font-weight: 600;
+        color: #3f51b5;
+        font-family: Georgia, 'Times New Roman', Times, serif;
+    }
+}
+
+.start-button {
+    position: absolute;
+    top: 55%;
+    color: white;
 }
