Add /login link for existing user

--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -56,6 +56,7 @@
                     color="primary" (click)="onSignUp()">Sign Up</button>
                 <mat-spinner *ngIf="isLoading"></mat-spinner>
             </mat-card-content>
+            <a routerLink="/login">Already a user? LogIn here.</a>
         </mat-card>
     </form>
 </section>
