--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -30,7 +30,7 @@
 
                 <!-- Form Submit -->
                 <button *ngIf="!isLoading" [disabled]="loginForm?.invalid" mat-raised-button type="submit"
-                    color="primary" (click)="onLogin()">Sign Up</button>
+                    color="primary" (click)="onLogin()">LogIn</button>
                 <mat-spinner *ngIf="isLoading"></mat-spinner>
 
             </mat-card-content>
