Make new-training card title responsive

--- a/src/app/training/training/new-training/new-training.component.html
+++ b/src/app/training/training/new-training/new-training.component.html
@@ -2,7 +2,7 @@
     <form (ngSubmit)="onStartTraining(f)" #f="ngForm">
         <mat-card fxFlex.gt-sm="400px">
             <mat-card-title>
-                Time for some workout dude!
+                <h1 style="font-weight: 500;">Time for some workout dude!</h1>
             </mat-card-title>
 
             <mat-card-content>
