--- a/src/app/apps/pomodoro/pomodoro.component.html
+++ b/src/app/apps/pomodoro/pomodoro.component.html
@@ -1,1 +1,53 @@
-<p>pomodoro works!</p>
+<section class="card-wrapper" fxFlex fxLayout="row" fxLayoutAligh="center">
+    <form (ngSubmit)="onStartPomodoro(f)" #f="ngForm">
+        <mat-card fxFlex.gt-sm="400px">
+            <mat-card-title>
+                <h1 style="font-weight: 500;">Let's focus!</h1>
+            </mat-card-title>
+
+            <mat-card-content>
+                <mat-stepper orientation="vertical" [linear]="isLinear" #stepper>
+                    <mat-step [stepControl]="firstFormGroup">
+                        <form [formGroup]="firstFormGroup">
+                            <ng-template matStepLabel>Fill out your name</ng-template>
+                            <mat-form-field appearance="fill">
+                                <mat-label>Name</mat-label>
+                                <input matInput placeholder="Last name, First name" formControlName="firstCtrl"
+                                    required>
+                            </mat-form-field>
+                            <div>
+                                <button mat-button matStepperNext>Next</button>
+                            </div>
+                        </form>
+                    </mat-step>
+                    <mat-step [stepControl]="secondFormGroup">
+                        <form [formGroup]="secondFormGroup">
+                            <ng-template matStepLabel>Fill out your address</ng-template>
+                            <mat-form-field appearance="fill">
+                                <mat-label>Address</mat-label>
+                                <input matInput formControlName="secondCtrl" placeholder="Ex. 1 Main St, New York, NY"
+                                    required>
+                            </mat-form-field>
+                            <div>
+                                <button mat-button matStepperPrevious>Back</button>
+                                <button mat-button matStepperNext>Next</button>
+                            </div>
+                        </form>
+                    </mat-step>
+                    <mat-step>
+                        <ng-template matStepLabel>Done</ng-template>
+                        <p>You are now done.</p>
+                        <div>
+                            <button mat-button matStepperPrevious>Back</button>
+                            <button mat-button (click)="stepper.reset()">Reset</button>
+                        </div>
+                    </mat-step>
+                </mat-stepper>
+            </mat-card-content>
+
+            <div class="start-button">
+                <button mat-raised-button color="primary" [disabled]="f.invalid">Start</button>
+            </div>
+        </mat-card>
+    </form>
+</section>
